# pelican_plugin_music

./: LICENSE  README.md  pyproject.toml  requirements.txt
pelican/plugins/music/: music.py
