[project]
name = "pelican_plugin_music"
version = "0.1"
description = "Music plugin for Pelican"
authors = [{name = "Benoît Rouits", email = "brouits@free.fr"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["pelican", "plugin", "music", "musician"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pelican>=4.5",
    "pytaglib>=3.1.0",
]

[project.urls]
"Homepage" = "https://github.com/be1/pelican_plugin_music"
"Issue Tracker" = "https://github.com/be1/pelican_plugin_music/issues"
"Changelog" = "https://github.com/be1/pelican_plugin_music/commits/main/"
"Funding" = "https://paypal.me/brouits"

[project.optional-dependencies]
markdown = ["markdown>=3.4"]

[dependency-groups]
lint = [
    "invoke>=2.2",
    "ruff>=0.14.2,<1.0.0",
]
test = [
    "invoke>=2.2",
    "markdown>=3.4",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-sugar>=1.0",
]

includes = ["pelican/"]
excludes = ["**/.DS_Store"]
